welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: ambiguous reference to overloaded definition,
both method growFlowers in class FlowerCase of type ()Unit
and  method growFlowers in class FlowerCase of type ()Unit
match argument types ()
		growFlowers();
                ^FlowerCase:43: error: method growFlowers is defined twice
  conflicting symbols both originated in file 'plm.runtime55.FlowerCase'
def growFlowers(){
    ^